[package]
name = "poker-v2"
version = "0.1.0"
authors = ["Tom Arrell <tom.arrell@gmail.com>"]
edition = "2018"

[dependencies]
rusqlite = "0.15.0"
r2d2 = "0.8.2"
r2d2_sqlite = "0.7.0"
actix-web = "0.7.13"
actix = "0.7.5"
juniper = "0.10.0"
futures = "0.1.25"

serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
